# htmy

./: .editorconfig  .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml
.github/workflows/: build-docs.yml  linters.yml  tests.yml
api/core/: index.html
api/etree/: index.html
api/function_component/: index.html
api/html/: index.html
api/i18n/: index.html
api/md/: index.html
api/renderer/: index.html
api/renderer/baseline/: index.html
api/renderer/default/: index.html
api/snippet/: index.html
api/typing/: index.html
api/utils/: index.html
components-guide/: index.html
docs/: components-guide.md  function-components.md  index.md
docs/api/: core.md  etree.md  function_component.md  html.md  i18n.md  jinja.md  md.md  renderer.md  snippet.md  typing.md  utils.md
docs/api/renderer/: baseline.md  default.md  recursive.md  typing.md
docs/examples/: fastapi-htmx-tailwind-daisyui.md  index.md  internationalization.md  jinja-slots-fastapi.md  markdown.md  snippet-slots-fastapi.md
examples/: index.html
examples/fastapi-htmx-tailwind-daisyui/: index.html
examples/internationalization/: app.py  index.html
examples/internationalization/locale/en/page/: hello.json
examples/jinja-slots-fastapi/: app.py  centered.jinja  layout.jinja  requirements.txt
examples/markdown/: index.html
examples/markdown_customization/: __init__.py  app.py  post.md
examples/markdown_essentials/: app.py  post.md
examples/snippet-slots-fastapi/: app.py  centered.html  index.html  layout.html  requirements.txt
function-components/: index.html
htmy/: __init__.py  core.py  error_boundary.py  etree.py  function_component.py  html.py  i18n.py  io.py  jinja.py  renderer.py  snippet.py  tag.py  typing.py  utils.py
htmy/md/: __init__.py  core.py  typing.py
htmy/renderer/: __init__.py  baseline.py  context.py  default.py  recursive.py  typing.py
search/: search_index.json
tests/: conftest.py  test_formatter.py  test_function_component.py  test_i18n.py  test_jinja.py  test_main_components.py  test_md.py  test_renderer_comparison.py  test_snippet.py  utils.py
tests/data/: blog-post.md  hello-world-snippet.html  hello-world.jinja
tests/data/locale/en/page/: overview.json  welcome.json
tests/data/locale/hu/page/: welcome.json
tests/renderer/: test_default_renderer.py  test_renderer_comparison.py  test_renderer_in_context.py  test_streaming_renderers.py
