[project]
name = "htmy"
dynamic = ["version"]
description = "Async, pure-Python server-side rendering engine."
authors = [{ name = "Peter Volf", email = "do.volfp@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anyio>=4.7.0,<5",
    "async-lru>=2.0.5,<3",
    "markdown>=3.8,<4",
]

[project.optional-dependencies]
lxml = ["lxml>=6.0.0"]

[dependency-groups]
dev = [
    "fastapi>=0.116.0",
    "fasthx>=3.0.0",
    "mkdocs-material>=9.6.16",
    "mkdocstrings[python]>=0.30.0",
    "mypy>=1.19.0,<2",
    "poethepoet>=0.38.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-random-order>=1.2.0",
    "ruff>=0.14.8,<0.15",
    "types-markdown>=3.8.0.20250809,<4",
    "typing-extensions>=4.12.2,<5",
    "types-lxml>=2025.3.30",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.mypy]
strict = true
show_error_codes = true

[tool.pdm.build]
excludes = ["tests/", "examples/"]

[tool.pdm.version]
source = "file"
path = "htmy/__init__.py"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = "--random-order"

[tool.ruff]
line-length = 108
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "dist",
    "docs",
]
lint.select = [
    "B", # flake8-bugbear
    "C", # flake8-comprehensions
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "S", # flake8-bandit - we must ignore these rules in tests
    "W", # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101"] # S101: use of assert detected

[tool.poe.tasks]
format = "ruff format --check ."
format-fix = "ruff format ."

lint = "ruff check ."
lint-fix = "ruff . --fix"

mypy = "mypy ."

check.sequence = ["format", "lint", "mypy"]
check.ignore_fail = "return_non_zero"

test = "python -m pytest tests"

serve-docs = "mkdocs serve"
